--- a/demo/src/main/resources/config/log4j.properties
+++ b/demo/src/main/resources/config/log4j.properties
@@ -1,29 +1,82 @@
+#
+#log4j.rootLogger=INFO, CONSOLE, FILE, API
+#
+#log4j.logger.com.syy=INFO, API
+#
+#log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender 
+#log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout 
+#log4j.appender.CONSOLE.Threshold=ERROR
+#log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH:mm:ss}[%c-%L][%t][%-4r] - %m%n
+#
+#log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender 
+#log4j.appender.FILE.File=E://logs/syyTest/demo.log
+#log4j.appender.FILE.ImmediateFlush=true
+#log4j.appender.FILE.Append=true
+#log4j.appender.FILE.DatePattern='.'yyyy-MM-dd
+#log4j.appender.FILE.layout=org.apache.log4j.PatternLayout 
+#log4j.appender.FILE.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH:mm:ss}[%c-%L][%t][%-4r] - %m%n
+#
+#log4j.appender.API=org.apache.log4j.DailyRollingFileAppender 
+#log4j.appender.API.File=E://logs/syyTest/api.log
+#log4j.appender.API.ImmediateFlush=true
+#log4j.appender.API.Append=true
+#log4j.appender.API.Threshold=INFO
+#log4j.appender.API.DatePattern='.'yyyy-MM-dd
+#log4j.appender.API.layout=org.apache.log4j.PatternLayout 
+#log4j.appender.API.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH:mm:ss}[%c-%L][%t][%-4r] - %m%n
 
-log4j.rootLogger=INFO, CONSOLE, FILE, API
 
-log4j.logger.com.syy=INFO, API
+log4j.rootLogger=debug,stdout,debug,info,error
+###FATAL>ERROR>WARN>INFO>DEBUG
 
-log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender 
-log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout 
-log4j.appender.CONSOLE.Threshold=ERROR
-log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH:mm:ss}[%c-%L][%t][%-4r] - %m%n
+log4j.logger.org.springframework=warn
+log4j.logger.org.apache=info
+log4j.logger.org.aspectj.weaver=warn
+log4j.logger.org.hibernate=off
+log4j.logger.com.mchange=off
+log4j.logger.java.sql.Connection=debug
+log4j.logger.java.sql.Statement=debug
+log4j.logger.java.sql.ResultSet=debug
+log4j.logger.java.sql.PreparedStatement=debug
 
-log4j.appender.FILE=org.apache.log4j.DailyRollingFileAppender 
-log4j.appender.FILE.File=E://logs/syyTest/demo.log
-log4j.appender.FILE.ImmediateFlush=true
-log4j.appender.FILE.Append=true
-log4j.appender.FILE.DatePattern='.'yyyy-MM-dd
-log4j.appender.FILE.layout=org.apache.log4j.PatternLayout 
-log4j.appender.FILE.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH:mm:ss}[%c-%L][%t][%-4r] - %m%n
+log4j.logger.httpclient.wire.header=off 
+log4j.logger.httpclient.wire.content=off
+log4j.logger.org.apache.commons.httpclient=off
+log4j.logger.org.apache.commons.httpclient.Wire=off
 
-log4j.appender.API=org.apache.log4j.DailyRollingFileAppender 
-log4j.appender.API.File=E://logs/syyTest/api.log
-log4j.appender.API.ImmediateFlush=true
-log4j.appender.API.Append=true
-log4j.appender.API.Threshold=INFO
-log4j.appender.API.DatePattern='.'yyyy-MM-dd
-log4j.appender.API.layout=org.apache.log4j.PatternLayout 
-log4j.appender.API.layout.ConversionPattern=[%p] %d{yyyy-MM-dd HH:mm:ss}[%c-%L][%t][%-4r] - %m%n
+
+################
+#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+#log4j.appender.stdout.layout=hikefa.core.util.log4j.ExPatternLayout
+#log4j.appender.stdout.layout.ConversionPattern = %d{yyyy-MM-dd HH\:mm\:ss\:SSS}\:%t(%T) %l - \n%p\: %m%n
+
+
+log4j.appender.debug = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.debug.File = E://logs/syyTest/debug.log
+log4j.appender.debug.layout = org.apache.log4j.PatternLayout 
+log4j.appender.debug.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss:SSS}:%p %t(%T)%m                    - %l%n
+log4j.appender.debug.DatePattern = '.'yyyy-MM-dd
+log4j.appender.debug.encoding = GBK
+log4j.appender.debug.Threshold = DEBUG
+
+#log4j.appender.info.layout = org.apache.log4j.PatternLayout
+log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.info.File = E://logs/syyTest/info.log
+log4j.appender.info.layout = org.apache.log4j.PatternLayout 
+log4j.appender.info.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss:SSS}:%p %t(%T)%m                    - %l%n
+log4j.appender.info.DatePattern = '.'yyyy-MM-dd
+log4j.appender.info.encoding = GBK
+log4j.appender.info.Threshold = INFO
+
+log4j.appender.error=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.error.File=E://logs/syyTest/error.log
+log4j.appender.error.layout=org.apache.log4j.PatternLayout 
+log4j.appender.error.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss:SSS}:%p %t(%T) %l - %m%n
+log4j.appender.error.DatePattern = '.'yyyy-MM-dd
+log4j.appender.error.encoding=GBK
+log4j.appender.error.Threshold=ERROR
+
 
 
 
