--- a/demo/src/main/webapp/WEB-INF/web.xml
+++ b/demo/src/main/webapp/WEB-INF/web.xml
@@ -30,18 +30,7 @@
 	<!-- 配置加载log4j.xml文件路径 -->
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
-		<param-value>classpath:config/log4j.xml</param-value>
-	</context-param>
-
-	<!-- 配置log4j.xml变量 -->
-	<context-param>
-		<param-name>rootLevel</param-name>
-		<param-value>DEBUG</param-value>
-	</context-param>
-
-	<context-param>
-		<param-name>loggingLevel</param-name>
-		<param-value>INFO</param-value>
+		<param-value>classpath:config/log4j.properties</param-value>
 	</context-param>
 
 	<!-- 配置log4j.xml监听器 -->
