--- a/test-syygl/pom.xml
+++ b/test-syygl/pom.xml
@@ -6,5 +6,6 @@
   <packaging>pom</packaging>
   <modules>
   	<module>test-syygl-dubbo</module>
+  	<module>test-syygl-mybatis</module>
   </modules>
 </project>
