--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -24,11 +24,11 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>4.0.0</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.1</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
