--- a/demo/src/main/resources/config/jdbc.properties
+++ b/demo/src/main/resources/config/jdbc.properties
@@ -8,4 +8,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://120.78.54.20:3306/sunyy?characterEncoding=utf-8
 jdbc.username=root
-jdbc.password=1111
+jdbc.password=password
