--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -116,6 +116,12 @@
 			<version>5.0.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongodb-driver</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
